<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletStatus">

    <androidx.cardview.widget.CardView
        android:id="@+id/walletView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="147dp">

            <TextView
                android:id="@+id/virtual_wallet_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/virtual_wallet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/virtual_wallet_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/virtual_wallet_description" />

            <TextView
                android:id="@+id/virtual_wallet_account_ballance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/virtual_wallet_account_balance" />
        </TableRow>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>